# saga-novel-studio

./: .env.example  .gitignore  CoAuthor_Director_Author_Proposal.docx  CoAuthor_vs_AutoNovel_Analysis.html  LICENSE  README.md  extracted_text.txt  manual.md  pyproject.toml  saga_cli.py  setup.py  start_new_book.py
.agent/: architect_instructions.md  deep_editor_instructions.md  editor_instructions.md  evaluator_instructions.md  lore_keeper_instructions.md  orchestrator_instructions.md  projects_registry.json  scribe_instructions.md  tenacious_coach_instructions.md
.agent/scripts/: agent_core.py  autonomous_director.py  compile_book.py  compile_epub.py  generate_cover_api.py  manage_manifest.py  parse_audiobook.py  synthesize_audiobook.py  typeset_book.py
.agent/workflows/: coach-me.md  compile-manuscript.md  create-cover.md  critique-chapter.md  kickoff.md  list-books.md  market-brainstorm.md  publish-manuscript.md  restore-session.md  story-idea.md  story-outline.md  write-chapter.md  yolo-run.md
00_Story_Bible/: bible_canon_rules.json  project_manifest.json
00_Story_Bible/characters/: avery.md  mara_sterling.md  template.md
00_Story_Bible/rules/: ANTI-SLOP.md  FOOLSCAP_RULES.md  STORY_GRID_RULES.md  TENACIOUS_RULES.md  (+1 more)
01_Planning/: foundation_critique.md  outline.md  premise.md  tenacious_workbook.md
02_Drafting/: chapter_01.md  chapter_02.md  chapter_03.md
03_Review/: Full_Manuscript.md  critique_01.md  critique_03.md
04_Publishing/: index.html  typeset_manuscript.html
saga_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+18 files in other folders)
